# ds-doctor-chat

./: Dockerfile  LICENSE  README.md  doctor_chat.ipynb  pyproject.toml
doctor_chat/: app.py  doctor_chat.ipynb  functionality.py
doctor_chat/gpt2-doctor-chat/: added_tokens.json  config.json  special_tokens_map.json  tf_model.h5  tokenizer.json  tokenizer_config.json  vocab.json:Zone.Identifier
