[tool.poetry]
name = "doctor_chat"
version = "0.1.0"
description = ""
authors = ["data-tamer2410 <vitaliy.dayneko2410@gmail.com>"]


[tool.poetry.dependencies]
python = "3.11.*"
transformers = "^4.48.2"
streamlit = "^1.41.1"
tf-keras = "^2.18.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
